--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,10 @@
         
         <div class="contact-section">
             <h3>
-                We'd love to hear from ya mom!
+                We'd love to hear from you!
             </h3>
             <h3>
-                Please feel free to ask questions, correct our mistakes or make any suggestions
+                Please feel free to ask questions, or make any suggestions on what you'd like to see
             </h3>
             <form class="contact-form" action="contactform.php" method="post" action="contactform.php">
                 <input name="name" type="text" placeholder="Full name" class="contact-form-text">
