--- a/exercises.html
+++ b/exercises.html
@@ -20,6 +20,10 @@
                 </div>
 
                 <div class="nav-link-wrapper">
+                    <a href="tutoring.html">Tutoring</a>
+                </div>
+                
+                <div class="nav-link-wrapper">
                     <a href="notes.html">Notes</a>
                 </div>
 
@@ -36,6 +40,11 @@
                 </div>
             </div>
         </header>
+
+        <div class="comingsoon">
+            Exam style questions and solutions coming soon!
+        </div>
+        <!---
         <div class="quote">"Questions and solutions tailored for GCSE and A Level Design and Technology"</div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
@@ -158,7 +167,7 @@
                 </div>
             </div>
         </div>
-
+    -->
         <div class="footer">
             <div class="footer-content">
                <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
