--- a/tutoring.html
+++ b/tutoring.html
@@ -45,12 +45,16 @@
                 <!--<img class="about-pic" src="images/ws_mugshot.jpg">-->
                 <div class="about-text">
                     <h2>About our tutors<br></h2>
-                    <p>Every child is different, so no two programs will ever be the same.</p>
+                    <p>We believe that every child is different, so no two programs will ever be the same.</p>
                     <p>Sessions will be tailored to each individual and what they wish to improve.</p>
                     <p></p>
-                    <P><br>We have taught millions of people all genders, and sexualities (but not gays)</P>
-                    <p>Contact us at ....<br><br><br></p>
-                    <h2>Meet the tutors<br></h2>
+                    <!--<P>We have taught millions of people all genders, and sexualities (but not gays)</P>-->
+                    <p><br>Contact us to find out more and arrange a first lesson!<br></p>
+                    <!--<h2>Meet the tutors<br></h2>-->
+
+                    <div class="contactmebtn">
+                        <a href="contact.html">Contact</a>
+                    </div> 
                 </div> 
             </div>
 
