--- a/coursework.html
+++ b/coursework.html
@@ -20,6 +20,10 @@
                 </div>
 
                 <div class="nav-link-wrapper">
+                    <a href="tutoring.html">Tutoring</a>
+                </div>
+
+                <div class="nav-link-wrapper">
                     <a href="notes.html">Notes</a>
                 </div>
 
@@ -35,7 +39,7 @@
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
-        </header>
+        </header>  
         <div class="comingsoon">
             Coursework examples coming soon!
         </div>
