--- a/homepg.html
+++ b/homepg.html
@@ -42,9 +42,12 @@
         </header>
 
         <div class="index-description">
-            <!<p>Hi welcome to our website!</p>
-            <p><br>hmmm where to start... Im a prick<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-            <p><br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>We hope to provide the best quality content so you can pass your exams!</p>
+            <div class="website-introduction">
+                <h2><p>Hi welcome to our website!</p></h2>
+                <p>DTbase is a completely free website offering the highest quality notes, exam questions, coursework examples to help you pass your GCSEs and A levels!</p>
+                <p>Our experienced tutors have helped hundreds of students over the UK to  to fulfil their academic potential.</p>
+                <p>We hope to provide the best quality content so you can pass your exams! Please provide any feedback on anything that can be improved or you would like to see.</p>
+            </div>
             <h2><hr>What we provide:</h2>   
             <div class="provideindex">
                 <h3><br>High quality notes for GCSE and A level</h3>
@@ -55,10 +58,9 @@
                 <img class="Coursework_pic" src="images/coursework_pic.jpg">
             </div> 
 
+                <h2><hr>Are you looking for a Maths, DT or Physics tutor?</h2> 
             <div class="tutoring">
-                <h2><hr>Are you looking for a tutor?</h2>   
-                <p>We have leading tutors who have taught massive lesbos (hot!).......</p>
-                <!--<p>We have qualified DT tutors who provide high quality 1-to-1 lessons to help you achieve your highest potential!</p>-->
+                <p>We have highly qualified tutors with years of experience in teaching to provide high quality 1-to-1 lessons to help you achieve your highest potential!</p>
                 <p>For more information please see the <a class="tutor_btn" href="tutoring.html">Tutoring</a> tab</p>
             </div>
         </div>
