--- a/materialsnotes.html
+++ b/materialsnotes.html
@@ -20,6 +20,10 @@
                 </div>
 
                 <div class="nav-link-wrapper">
+                    <a href="tutoring.html">Tutoring</a>
+                </div>
+
+                <div class="nav-link-wrapper">
                     <a href="notes.html">Notes</a>
                 </div>
 
