--- a/materialsnotes.html
+++ b/materialsnotes.html
@@ -16,7 +16,7 @@
             <div class="toggle"></div>
             <div class="navigation">
                 <div class="nav-link-wrapper">
-                    <a href="homepg.html">Home</a>
+                    <a href="index.html">Home</a>
                 </div>
 
                 <div class="nav-link-wrapper">
@@ -48,7 +48,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="C:\Users\henry\OneDrive\Desktop\DTbase\documents\Section_4_Woods.pdf">Woods</a>
+                            <a href="documents\Section_4_Woods.pdf">Woods</a>
                         </div>
                     </div>
                 </div>
