--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <div class="toggle"></div>
             <div class="navigation">
                 <div class="nav-link-wrapper">
-                    <a href="homepg.html">Home</a>
+                    <a href="index.html">Home</a>
                 </div>
 
                 <div class="nav-link-wrapper">
@@ -49,12 +49,20 @@
             <h3>
                 Please feel free to ask questions, or make any suggestions on what you'd like to see
             </h3>
-            <form class="contact-form" action="contactform.php" method="post" action="contactform.php">
+            <!-- <form class="contact-form" action="contactform.php" method="post" action="contactform.php">
                 <input name="name" type="text" placeholder="Full name" class="contact-form-text">
                 <input name="mail" type="text" placeholder="Email" class="contact-form-text">
                 <textarea name="message" type="text" placeholder="Message" class="contact-form-text"></textarea>
                 <button name="submit" type="submit" class="contact-form-btn">SUBMIT</button>
-            </form>
+            </form> -->
+            <form class="contact-form" action="https://formspree.io/f/{form_id}" method="post">
+                <!-- <label for="email">Your Email</label>
+                <input name="Email" id="email" type="email"> -->
+                <input name="name" type="text" placeholder="Full name" class="contact-form-text">
+                <input name="mail" type="text" placeholder="Email" class="contact-form-text">
+                <textarea name="message" type="text" placeholder="Message" class="contact-form-text"></textarea>
+                <button name="submit" type="submit" class="contact-form-btn">SUBMIT</button>
+              </form>
         </div>
 
 
