--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 <!-- <label for="email">Your Email</label>
                 <input name="Email" id="email" type="email"> -->
                 <input name="name" type="text" placeholder="Full name" class="contact-form-text">
-                <input name="mail" type="text" placeholder="Email" class="contact-form-text">
+                <input name="Email" id="email" type="email" placeholder="Email" class="contact-form-text">
                 <textarea name="message" type="text" placeholder="Message" class="contact-form-text"></textarea>
                 <button name="submit" type="submit" class="contact-form-btn">SUBMIT</button>
               </form>
