--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <textarea name="message" type="text" placeholder="Message" class="contact-form-text"></textarea>
                 <button name="submit" type="submit" class="contact-form-btn">SUBMIT</button>
             </form> -->
-            <form class="contact-form" action="https://formspree.io/f/{xlevvdya}" method="post">
+            <form class="contact-form" action="https://formspree.io/f/xlevvdya" method="post">
                 <!-- <label for="email">Your Email</label>
                 <input name="Email" id="email" type="email"> -->
                 <input name="name" type="text" placeholder="Full name" class="contact-form-text">
