--- a/exercises.html
+++ b/exercises.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css"/>
     <title>DTBASE</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBLKK0K1XX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KBLKK0K1XX');
+</script>
 <body>
     <div class="containter">  
         <header>
@@ -16,7 +25,7 @@
             <div class="toggle"></div>
             <div class="navigation">
                 <div class="nav-link-wrapper">
-                    <a href="homepg.html">Home</a>
+                    <a href="index.html">Home</a>
                 </div>
 
                 <div class="nav-link-wrapper">
