--- a/thanks.html
+++ b/thanks.html
@@ -53,26 +53,14 @@
         
         <div class="contact-section">
             <h3>
-                We'd love to hear from you!
+                Thank you for contacting DTBase, We will get back to you shortly!
             </h3>
-            <h3>
-                Please feel free to ask questions, or make any suggestions on what you'd like to see
-            </h3>
-            <!-- <form class="contact-form" action="contactform.php" method="post" action="contactform.php">
-                <input name="name" type="text" placeholder="Full name" class="contact-form-text">
-                <input name="mail" type="text" placeholder="Email" class="contact-form-text">
-                <textarea name="message" type="text" placeholder="Message" class="contact-form-text"></textarea>
-                <button name="submit" type="submit" class="contact-form-btn">SUBMIT</button>
-            </form> -->
-            <form class="contact-form" action="https://formspree.io/f/xlevvdya" method="POST">
-                <!-- <label for="email">Your Email</label>
-                <input name="Email" id="email" type="email"> -->
-                <input name="name" type="text" placeholder="Full name" class="contact-form-text">
-                <input name="email" id="email" type="email" placeholder="Email" class="contact-form-text">
-                <textarea name="message" type="text" placeholder="Message" class="contact-form-text"></textarea>
-                <button name="submit" type="submit" class="contact-form-btn">SUBMIT</button>
-              </form>
+
+            <div class="returnHomeBtn">
+                <a href="index.html">Home</a>
+            </div> 
         </div>
+
 
 
         <div class="footer">
