--- a/exercises.html
+++ b/exercises.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>
+        DTBASE. Design and Technology - Past paper questions and solutions. Revise and learn GCSE/A-Level content for DT. Find high quality 
+        notes, past paper questions, solutions, coursework examples and much more!
+    </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
-    <title>DTBASE</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KBLKK0K1XX"></script>
