--- a/materialsnotes.html
+++ b/materialsnotes.html
@@ -60,7 +60,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\Section_4_Woods.pdf">Woods</a>
+                            <a href="documents\1. Materials\DTBase_Materials_Woods.pdf">Woods</a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <div class="subtitle">Metals</div>
+                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Metals</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <div class="subtitle">Polymers</div>
+                            <a href="documents\1. Materials\DTBase_Materials_Polymers.pdf">Polymers</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <div class="subtitle">Composites</div>
+                            <a href="documents\1. Materials\DTBase_Materials_Composites.pdf">Composites</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <div class="subtitle">Paper and Boards</div>
+                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Paper and Boards</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote6.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <div class="subtitle">Textiles</div>
+                            <a href="documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,16 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <div class="subtitle">Smart/Modern Materials</div>
+                            <a href="documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(images/matnote6.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="documents\1. Materials\DTBase_Materials_ModernMaterials.pdf">Modern Materials</a>
                         </div>
                     </div>
                 </div>
