Format changes, all notes added

--- a/FeaturesOfManufacturingIndustries.html
+++ b/FeaturesOfManufacturingIndustries.html
@@ -53,7 +53,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Materials</p>
+            <p>Features of Manufacturing in Industries</p>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
@@ -62,7 +62,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Woods.pdf">Woods</a>
+                            <a href="documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_MethodsOfProduction.pdf">Methods of Production</a>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Metals</a>
+                            <a href="documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_QualityMonitoringSystems.pdf">Quality Monitoring Systems</a>
                         </div>
                     </div>
                 </div>
@@ -80,55 +80,11 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Polymers.pdf">Polymers</a>
+                            <a href="documents\8. Features of manufacturing industries\DTbase_FeaturesOfManufacturingIndustries_ModernManufacturingMethodsAndSystems.pdf">Modern Manufacturing Methods and Systems</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio4.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Composites.pdf">Composites</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/matnote5.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Paper and Boards</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/matnote6.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio7.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/matnote7.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_ModernMaterials.pdf">Modern Materials</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
