--- a/FurtherProcessesAndTechniques.html
+++ b/FurtherProcessesAndTechniques.html
@@ -53,7 +53,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>Materials</p>
+            <p>Further Processes and Techniques</p>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
@@ -62,7 +62,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Woods.pdf">Woods</a>
+                            <a href="documents\12. Further processes and techniques\DTBase_ProjectManagementSystems.pdf">Project Management Systems</a>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Metals</a>
+                            <a href="documents\12. Further processes and techniques\DTBase_Stages_Of_A_Products_Life_Cycle.pdf">Stages of a Product's Life Cycle</a>
                         </div>
                     </div>
                 </div>
@@ -80,55 +80,11 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Polymers.pdf">Polymers</a>
+                            <a href="documents\12. Further processes and techniques\DTBase_Strategies_Techniques_And_Approaches_To_Explore_Create_And_Evaluate_Design_Ideas.pdf">Strategies Techniques and Approaches to Explore Create and Evaluate Design Ideas</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio4.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Composites.pdf">Composites</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/matnote5.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_Metals.pdf">Paper and Boards</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/matnote6.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/portfolio7.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_SmartMaterials.pdf">Smart Materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(images/matnote7.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="documents\1. Materials\DTBase_Materials_ModernMaterials.pdf">Modern Materials</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
