--- a/index.html
+++ b/index.html
@@ -55,24 +55,34 @@
 
         <div class="index-description">
             <div class="website-introduction">
-                <h2><p>Hi welcome to our website!</p></h2>
-                <p>DTbase is a completely free website offering the highest quality notes, exam questions, coursework examples to help you pass your GCSEs and A levels!</p>
+                <h2><p>Welcome!</p></h2>
+                <p>DTbase is a <b>completely free</b> website offering the highest quality notes, exam questions, coursework examples to help you pass your GCSEs and A levels!</p>
                 <p>Our experienced tutors have helped hundreds of students over the UK to  to fulfil their academic potential.</p>
                 <p>We hope to provide the best quality content so you can pass your exams! Please provide any feedback on anything that can be improved or you would like to see.</p>
             </div>
             <h2><hr>What we provide:</h2>   
             <div class="provideindex">
-                <h3><br>High quality notes for GCSE and A level</h3>
+
+                <div class = "provideindex_text">
+                    <h3><br>High quality notes for GCSE and A level</h3>
+                </div>
                 <img class="Notes_pic" src="images/note_pic.jpg">
-                <h3><br>Abundance of free exercises</h3>
+
+                <div class = "provideindex_text">
+                    <h3><br>Abundance of free exercises</h3>
+                </div>
                 <img class="exercise_pic" src="images/exercise_pic.jpg">
-                <h3><br>Coursework examples for you to follow</h3>
+
+                <div class = "provideindex_text">
+                    <h3><br>Real coursework examples for you to follow</h3>
+                </div>
                 <img class="Coursework_pic" src="images/coursework_pic.jpg">
+
             </div> 
 
-                <h2><hr>Are you looking for a Maths, DT or Physics tutor?</h2> 
+                <h2><hr>Are you looking for an A-level or GCSE Design and Technology tutor?</h2> 
             <div class="tutoring">
-                <p>We have highly qualified tutors with years of experience in teaching to provide high quality 1-to-1 lessons to help you achieve your highest potential!</p>
+                <p>We have highly experienced tutors with years of experience in teaching to provide high quality, <b>personally tailored 1-to-1 lessons</b> to help you achieve your highest potential!</p>
                 <p>For more information please see the <a class="tutor_btn" href="tutoring.html">Tutoring</a> tab</p>
             </div>
         </div>
