--- a/notes.html
+++ b/notes.html
@@ -52,7 +52,9 @@
                 </div>
             </div>
         </header>
-        <div class="quote">"Handmade notes tailored for GCSE and A Level Design and Technology"</div>
+        <div class="quote">
+            <p>"Handmade notes tailored for GCSE and A Level Design and Technology"</p>
+        </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
 
@@ -60,6 +62,7 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio1.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
+                            <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
                             <a href="materialsnotes.html">Materials</a>
                         </div>
                     </div>
@@ -69,7 +72,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Performance Characteristics Of Materials</a>
+                            <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
+                            <a href="PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +82,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Processes Techniques and Specialist Tools</a>
+                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
+                            <a href="ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +92,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Digital Technologies</a>
+                            <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
+                            <a href="DigitalTechnologies.html">Digital Technologies</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +102,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio5.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Factors Influencing The Development Of Products</a>
+                            <a href="FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a>
+                            <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
                         </div>
                     </div>
                 </div>
@@ -105,7 +112,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio6.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Effects Of Technological Developments</a>
+                            <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
+                            <a href="EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +122,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio7.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a>
+                            <!-- <a href="Notes\AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a> -->
+                            <a href="AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a>
                         </div>
                     </div>
                 </div>
@@ -123,7 +132,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio8.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Features Of Manufacturing Industries</a>
+                            <!-- <a href="Notes\FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a> -->
+                            <a href="FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a>
                         </div>
                     </div>
                 </div>
@@ -132,7 +142,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio9.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Designing For Maintenance and The Cleaner Environment</a>
+                            <!-- <a href="Notes\DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a> -->
+                            <a href="DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a>
                         </div>
                     </div>
                 </div>
@@ -141,7 +152,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio10.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Current Legislation</a>
+                            <a href="CurrentLegislation.html">Current Legislation</a>
+                            <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
                         </div>
                     </div>
                 </div>
@@ -150,7 +162,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio11.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Information Handling, Modelling and Forward Planning</a>
+                            <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
+                            <a href="InformationHandlingModellingAndForwardPlanning.html">Information Handling, Modelling and Forward Planning</a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +172,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio12.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Further Processes and Techniques</a>
+                            <a href="FurtherProcessesAndTechniques.html">Further Processes and Techniques</a>
+                            <!-- <a href="Notes\FurtherProcessesAndTechniques.html">Further Processes and Techniques</a> -->
                         </div>
                     </div>
                 </div>
@@ -168,7 +182,8 @@
                     <div class="portfolio-img-background" style="background-image:url(images/portfolio13.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="materialsnotes.html">Mathematics for D&T</a>
+                            <a href="MathematicsForD&T.html">Mathematics for D&T</a>
+                            <!-- <a href="Notes\MathematicsForD&T.html">Mathematics for D&T</a> -->
                         </div>
                     </div>
                 </div>
