--- a/tutoring.html
+++ b/tutoring.html
@@ -55,15 +55,20 @@
             <div class="about-description">
                 <!--<img class="about-pic" src="images/ws_mugshot.jpg">-->
                 <div class="about-text">
-                    <h2>About our tutors<br></h2>
-                    <p>We believe that every child is different, so no two programs will ever be the same.</p>
-                    <p>Sessions will be tailored to each individual and what they wish to improve.</p>
-                    <p></p>
-                    <!--<P>We have taught millions of people all genders, and sexualities (but not gays)</P>-->
-                    <p><br>Contact us to find out more and arrange a first lesson!<br></p>
-                    <!--<h2>Meet the tutors<br></h2>-->
-
-                    <div class="contactmebtn">
+                    <h2>Our Tutoring Service<br></h2>
+                    <div class = "about_tutoring_text">
+                        <p>We believe that every child is different, so no two programs will ever be the same.</p>
+                        <p>Sessions will be <b>tailored</b> to each individual and what they wish to improve.</p>
+                        <p>We have highly experienced tutors with years of experience and thousands of lessons taught under their belt to help you achieve your highest potential!</p>
+                        <!-- <p>We believe that every child is different, so no two programs will ever be the same.
+                        Sessions will be <b>tailored</b> to each individual and what they wish to improve. 
+                        We have highly experienced tutors with years of experience and thousands of lessons under their belt in tutoring to help you achieve your highest potential!</p> -->
+                        <p></p>
+                        <!--<P>We have taught millions of people all genders, and sexualities (but not gays)</P>-->
+                        <p><br>Contact us to find out more and arrange a first lesson!<br></p>
+                        <!--<h2>Meet the tutors<br></h2>-->
+                    </div>
+                        <div class="contactmebtn">
                         <a href="contact.html">Contact</a>
                     </div> 
                 </div> 
