Fix contact button

--- a/tutoring.html
+++ b/tutoring.html
@@ -69,7 +69,8 @@
                         <!--<h2>Meet the tutors<br></h2>-->
                     </div>
                         <div class="contactmebtn">
-                        <a href="contact.html">Contact</a>
+                            <a href="contact.html">Contact</a>
+                        </div>
                     </div> 
                 </div> 
             </div>
