Optimise for Mobile

--- a/FeaturesOfManufacturingIndustries.html
+++ b/FeaturesOfManufacturingIndustries.html
@@ -8,7 +8,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KBLKK0K1XX"></script>
@@ -27,6 +26,13 @@
             </div>
             <div class="toggle"></div>
             <div class="navigation">
+
+                <a href="#" class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+
                 <div class="nav-link-wrapper">
                     <a href="index.html">Home</a>
                 </div>
@@ -89,4 +95,5 @@
         </div>
     </div>
 </body>
+<link rel="stylesheet" href="styles.css"/>
 </html>
