--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
+
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KBLKK0K1XX"></script>
@@ -27,6 +28,13 @@
             </div>
             <div class="toggle"></div>
             <div class="navigation">
+
+                <a href="#" class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+
                 <div class="nav-link-wrapper">
                     <a href="index.html">Home</a>
                 </div>
@@ -50,6 +58,7 @@
                 <div class="nav-link-wrapper">
                     <a href="contact.html">Contact</a>
                 </div>
+
             </div>
         </header>
 
@@ -97,7 +106,7 @@
     </div>
 
 
-        <script src="js/script.js"></script>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
