--- a/InformationHandlingModellingAndForwardPlanning.html
+++ b/InformationHandlingModellingAndForwardPlanning.html
@@ -27,6 +27,13 @@
             </div>
             <div class="toggle"></div>
             <div class="navigation">
+
+                <a href="#" class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+
                 <div class="nav-link-wrapper">
                     <a href="index.html">Home</a>
                 </div>
@@ -98,4 +105,5 @@
         </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
