--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,13 @@
             </div>
             <div class="toggle"></div>
             <div class="navigation">
+
+                <a href="#" class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+
                 <div class="nav-link-wrapper">
                     <a href="index.html">Home</a>
                 </div>
@@ -87,7 +94,7 @@
             </div>
         </div>
 
-        <script src="js/script.js"></script>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
