--- a/coursework.html
+++ b/coursework.html
@@ -27,6 +27,13 @@
             </div>
             <div class="toggle"></div>
             <div class="navigation">
+
+                <a href="#" class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+
                 <div class="nav-link-wrapper">
                     <a href="index.html">Home</a>
                 </div>
@@ -55,7 +62,6 @@
         <div class="comingsoon">
             Coursework examples coming soon!
         </div>
-                <script src="js/script.js"></script>
 
                 <div class="footer">
                     <div class="footer-content">
@@ -68,4 +74,5 @@
 
     </div>
 </body>
+<script src="script.js"></script>
 </html>
