--- a/thanks.html
+++ b/thanks.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>
+        DTBASE. Design and Technology - High quality 1-to-1 tutoring services. Revise and learn GCSE/A-Level content for DT. Find high quality 
+        notes, past paper questions, solutions, coursework examples and much more!
+    </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
-    <title>DTBASE</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KBLKK0K1XX"></script>
@@ -24,6 +27,13 @@
             </div>
             <div class="toggle"></div>
             <div class="navigation">
+
+                <a href="#" class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+
                 <div class="nav-link-wrapper">
                     <a href="index.html">Home</a>
                 </div>
@@ -72,7 +82,7 @@
             </div>
         </div>
 
-        <script src="js/script.js"></script>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
