--- a/notes.html
+++ b/notes.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBLKK0K1XX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YZG2YDGNFN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KBLKK0K1XX');
+  gtag('config', 'G-YZG2YDGNFN');
 </script>
 <body>
     <div class="containter">  
@@ -60,7 +60,7 @@
             </div>
         </header>
         <div class="quote">
-            <p>"Handmade notes tailored for GCSE and A Level Design and Technology"</p>
+            <p>Free handmade revision notes tailored for GCSE and A Level Design and Technology</p>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
