--- a/DigitalTechnologies.html
+++ b/DigitalTechnologies.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBLKK0K1XX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YZG2YDGNFN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KBLKK0K1XX');
+  gtag('config', 'G-YZG2YDGNFN');
 </script>
 <body>
     <div class="containter">  
