--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="containter">  
         <header>
             <div class="Logo">
-                <img class="logo" src="images/Logo.png">
+                <img class="logo" src="images/Logo.png" alt="DTBase Logo">
             </div>
             <div class="toggle"></div>
             <div class="navigation">
@@ -40,23 +40,23 @@
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="tutoring.html">Tutoring</a>
+                    <a href="html/tutoring.html">Tutoring</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="notes.html">Notes</a>
+                    <a href="html/notes/notes.html">Notes</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="exercises.html">Exercises</a>
+                    <a href="html/exercises/exercises.html">Exercises</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="coursework.html">Coursework</a>
+                    <a href="html/coursework/coursework.html">Coursework</a>
                 </div>
 
                 <div class="nav-link-wrapper">
-                    <a href="contact.html">Contact</a>
+                    <a href="html/contact.html">Contact</a>
                 </div>
 
             </div>
@@ -75,17 +75,17 @@
                 <div class = "provideindex_text">
                     <h3><br>High quality notes for GCSE and A level</h3>
                 </div>
-                <img class="Notes_pic" src="images/note_pic.jpg">
+                <img class="Notes_pic" src="images/note_pic.jpg" alt="">
 
                 <div class = "provideindex_text">
                     <h3><br>Abundance of free exercises</h3>
                 </div>
-                <img class="exercise_pic" src="images/exercise_pic.jpg">
+                <img class="exercise_pic" src="images/exercise_pic.jpg" alt="">
 
                 <div class = "provideindex_text">
                     <h3><br>Real coursework examples for you to follow</h3>
                 </div>
-                <img class="Coursework_pic" src="images/coursework_pic.jpg">
+                <img class="Coursework_pic" src="images/coursework_pic.jpg" alt="">
 
             </div> 
 
